[package]
name = "calculator"
version = "0.1.0"
authors = ["Alan Davide Bovo <alandavide.bovo.stud@ispascalcomandini.it>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5"

[build-dependencies]
slint-build = "1.5"
